src/components/FlatSharpSelector.css
.flat-sharp-grid {
  width: 5.5rem;
  height: 6rem;
  display: grid;
  grid-template-rows: 1.5rem 3rem 1fr;
  /* border: 1px solid green; */
}

.flat-sharp-label {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 0.8rem;
  /* border: 1px solid red; */
}

.flat-sharp-buttons {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  /* border: 1px solid red; */
}

.flat-button,
.sharp-button {
  width: 2.5rem;
  height: 2.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  background-image: linear-gradient(to bottom, #3f3f3f, #202020, #101010);
  border: 3px solid #000;
  font-size: 1.4rem;
}

/* TODO: Use a nice, glowin effect for this buttons. */
.flat-button.active,
.sharp-button.active {
  background-image: linear-gradient(to bottom, #3f3f3f, #202020, #101010);
  border: 3px solid green;
  /* box-shadow: 0 0 1px 1px darkgreen, 0 0 1px 1px darkgreen inset; */
  color: limegreen;
}

